--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -61,4 +61,9 @@
       </ItemGroup>
     </When>
   </Choose>
+  <ItemGroup>
+    <!-- Transitive pinned packages - check if they are still needed on package upgrades -->
+    <PackageVersion Include="System.Net.Http" Version="4.3.4" />
+    <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
+  </ItemGroup>
 </Project>
