RM-9396 Fix vulnerabilities of transitive dependencies in .NET 8

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -59,6 +59,10 @@
         <PackageVersion Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
         <PackageVersion Include="System.Resources.Extensions" Version="8.0.0" />
       </ItemGroup>
+      <ItemGroup>
+        <!-- Transitive pinned packages - check if they are still needed on package upgrades -->
+        <PackageVersion Include="System.Formats.Asn1" Version="8.0.1" />
+      </ItemGroup>
     </When>
   </Choose>
   <ItemGroup>
